@@ -86,6 +86,7 @@ export(existing.CytoscapeWindow)
 export(expandGroup)
 export(exportImage)
 export(exportNetwork)
+export(exportNetworkToNDEx)
 export(exportVisualStyles)
 export(fitContent)
 export(fitSelectedContent)
@@ -136,6 +137,7 @@ export(getLineStyles)
 export(getNetworkCenter)
 export(getNetworkCount)
 export(getNetworkList)
+export(getNetworkNDExId)
 export(getNetworkName)
 export(getNetworkProperty)
 export(getNetworkSuid)
@@ -178,6 +180,7 @@ export(hidePanel)
 export(hideSelectedEdges)
 export(hideSelectedNodes)
 export(importNetworkFromFile)
+export(importNetworkFromNDEx)
 export(initEdgeAttribute)
 export(initNodeAttribute)
 export(installApp)
@@ -318,6 +321,7 @@ export(unhideEdges)
 export(unhideNodes)
 export(uninstallApp)
 export(updateApp)
+export(updateNetworkInNDEx)
 export(updateStyleDefaults)
 export(updateStyleMapping)
 importFrom(BiocGenerics,cbind)
